# pydirac-papertools

./: .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  pyproject.toml
examples/: plot_rsp_dens.py  write_paper.py
src/pydirac_papertools/: __init__.py  constant.py  figure.py  formula.py  processor.py  table.py
src/pydirac_papertools/data/: atom_dipole_footer.tex  atom_dipole_header.tex  best_solutions.json  best_solutions_with_DC-CI.json  group_dipole_footer.tex  group_dipole_header.tex  mrci_group_13_body.tex  mrci_group_14_body.tex  mrci_group_15_body.tex  mrci_group_16_body.tex  mrci_group_17_body.tex  mrci_group_1_11_body.tex  mrci_group_2_12_18_body.tex  plot_style.txt  plot_style_long_fig.txt  socc_dipole_body.tex  socc_dipole_ccsd_body.tex  socc_quad_ccsd_body.tex  srcc_dipole_body.tex  srcc_dipole_ml0_body.tex  srcc_quad_body.tex  srcc_quad_ml0_body.tex
src/pydirac_papertools/processor/: __init__.py  abstract.py  atom.py  group.py  utils.py
src/pydirac_papertools/processor/methods/: __init__.py  dccc.py  dcci.py  nrcc.py  srcc.py
src/pydirac_papertools/scripts/: write_best_solution.py
src/pydirac_papertools/tests/: test_processor.py
tests/: test_processor.py
tests/data/: group-1.json
tests/data/Al/: Al_Ml1.inp
tests/data/Al/Ml0/: Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0005.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0010.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0020.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0030.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0040.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.005.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0060.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0070.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0080.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0090.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0100.out  Al_dyall.acv4z_Al_dyall.acv4z_zff=+0.0110.out  Al_srcc-dyall-acv4z.inp  (+30 more)
tests/data/Al_mrci/: Al_dyall.acv4z.inp  Al_dyall.acv4z_Al_dyall.acv4z_zff=0.0000.out  Al_dyall.v2z.1_Al_dyall.v2z_zff=0.0000.out  Al_dyall.v2z.2_Al_dyall.v2z_zff=0.0000.out  Al_dyall.v2z.3_Al_dyall.v2z_zff=0.0000.out  Al_dyall.v2z.inp  Al_dyall.v2z.inp.1  Al_dyall.v2z.inp.2  Al_dyall.v2z.mol  Al_dyall.v2z_Al_dyall.v2z_zff=0.0000.out  PYDIRAC.inp  PYDIRAC_1RDM.inp  generate_data.py
tests/data/Al_nr/: Al_Ml0.inp  Al_dyall.acv4z.inp
tests/data/O_mrci/: O_dyall.acv4z.inp  PYDIRAC.inp  PYDIRAC_KRCI_VISUAL.inp  README
(+171 files in other folders)
